# archaeologist

./: .gitignore  LICENSE  README.md  clean.py  main.py  pyproject.toml  report.py  requirements.txt
.github/workflows/: archaeologist.yml
archaeologist/: __init__.py  clean_cli.py  cli.py  complexity_cli.py  deleter.py  dupes_cli.py  git_analyzer.py  graph_cli.py  impact_cli.py  report_cli.py  scanner.py  scorer.py  test_runner.py
docs/: index.html
sample_flutter/lib/screens/: home_screen.dart
sample_flutter/lib/utils/: api.dart  helpers.dart
sample_flutter/test/: widget_test.dart
sample_project/api/: users.py
sample_project/tests/: test_users.py
sample_project/utils/: auth.py  formatting.py
src/: pr_opener.py  scanner.py  scorer.py
