[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "deadcode-archaeologist"
version = "0.1.0"
description = "Find and auto-delete dead code across 9 languages — with git intelligence and auto PR"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Prathik", email = "prathik@example.com" }]
keywords = ["dead-code", "static-analysis", "linter", "refactoring", "cleanup"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "tree-sitter>=0.22",
    "tree-sitter-python",
    "tree-sitter-javascript",
    "tree-sitter-ruby",
    "tree-sitter-go",
    "tree-sitter-java",
    "tree-sitter-rust",
    "tree-sitter-kotlin",
    "tree-sitter-swift",
    "gitpython",
    "rich",
    "click",
]

[project.scripts]
deadcode = "deadcode_archaeologist.main:cli"
deadcode-clean = "deadcode_archaeologist.clean:cli"
deadcode-report = "deadcode_archaeologist.report:generate_report"

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/deadcode-archaeologist"
Repository = "https://github.com/YOUR_USERNAME/deadcode-archaeologist"
Issues = "https://github.com/YOUR_USERNAME/deadcode-archaeologist/issues"
