[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "archaeologist"
version = "0.8.2"
description = "Find and auto-delete dead code across 9 languages — with git intelligence and auto PR"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Prathik", email = "prathik@example.com" }]
keywords = ["dead-code", "static-analysis", "linter", "refactoring", "cleanup", "flutter", "dart"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "tree-sitter>=0.22",
    "tree-sitter-python",
    "tree-sitter-javascript",
    "tree-sitter-ruby",
    "tree-sitter-go",
    "tree-sitter-java",
    "tree-sitter-rust",
    "tree-sitter-kotlin",
    "tree-sitter-swift",
    "gitpython",
    "rich",
    "click",
]

[project.scripts]
deadcode = "archaeologist.cli:cli"
deadcode-clean = "archaeologist.clean_cli:cli"
deadcode-report = "archaeologist.report_cli:cli"
archaeologist-graph = "archaeologist.graph_cli:cli"
archaeologist-impact = "archaeologist.impact_cli:cli"
archaeologist-complexity = "archaeologist.complexity_cli:cli"
archaeologist-dupes = "archaeologist.dupes_cli:cli"

[project.urls]
Homepage = "https://github.com/prathik-arun/deadcode-archaeologist"
Repository = "https://github.com/prathik-arun/deadcode-archaeologist"

[tool.setuptools.packages.find]
where = ["."]
include = ["archaeologist*"]
